Refactor app structure: remove capacitor.config.ts, update dependencies in package.json, and implement Google authentication in App.vue and LoginView.vue. Enhance routing with BottomNavigation and add new OnBoarding page. Update HomeView with a carousel and improved layout.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
+                <meta-data android:name="com.google.android.gms.auth.api.signin" android:value="843645413677-kkvo0ccvqdacfk1u1vpicp3eokv8h812.apps.googleusercontent.com" />
     </application>
 
     <!-- Permissions -->
