--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@capacitor/android": "^7.2.0",
     "@capacitor/core": "^7.2.0",
+    "@capacitor/preferences": "^7.0.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/vue": "^8.5.6",
     "@ionic/vue-router": "^8.5.6",
     "@tailwindcss/vite": "^4.1.5",
-    "pinia": "^3.0.1",
+    "firebase": "^11.6.1",
+    "pinia": "^3.0.2",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
