Add Capacitor Preferences and Google Auth: include new modules in settings.gradle, update build.gradle for dependencies, configure signing for debug builds, and modify AndroidManifest.xml for deep linking and metadata adjustments.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                          <action android:name="android.intent.action.VIEW" />
+                          <category android:name="android.intent.category.DEFAULT" />
+                          <category android:name="android.intent.category.BROWSABLE" />
+                          <data android:scheme="myapp" android:host="auth" />
+            </intent-filter>
 
         </activity>
 
@@ -33,7 +39,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
-                <meta-data android:name="com.google.android.gms.auth.api.signin" android:value="843645413677-kkvo0ccvqdacfk1u1vpicp3eokv8h812.apps.googleusercontent.com" />
+                <meta-data 
+                android:name="com.google.android.gms.auth.api.signin" 
+                android:value="843645413677-kkvo0ccvqdacfk1u1vpicp3eokv8h812.apps.googleusercontent.com" />
     </application>
 
     <!-- Permissions -->
