--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+        signingConfigs {
+        debug {
+            storeFile file("/Users/johnlerrytaruc/Documents/3dCake/debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
 }
 
 repositories {
