--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@ionic/vue": "^8.5.6",
     "@ionic/vue-router": "^8.5.6",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/three": "^0.176.0",
     "firebase": "^11.6.1",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5",
+    "three": "^0.176.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
