--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/vue-router": "^8.5.6",
     "@tailwindcss/vite": "^4.1.5",
     "@types/three": "^0.176.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
@@ -30,9 +31,10 @@
   "devDependencies": {
     "@capacitor/cli": "^7.2.0",
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "axios": "^1.9.0",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
