Update BottomNavigation and messageStore for improved messaging functionality. Enable fullscreen mode in Android configuration, enhance unread message tracking with computed properties, and implement real-time listeners for new messages from admin users. Clean up listeners on component unmount to optimize performance. Additionally, refine styles in CustomizeCakeView for better user experience.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -14,7 +14,7 @@
       "forceCodeForRefreshToken": true
     },
      "android": {
-      "fullscreen": false
+      "fullscreen": true
     }
   }
 } 
